production/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ssi-ingress
  namespace: core-api
spec:
  rules:
    - host: ssi.teda.th
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /did
            backend:
              service:
                name: did
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /vc/verify
            backend:
              service:
                name: vc-verify
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /vc/status
            backend:
              service:
                name: vc-status
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /vc
            backend:
              service:
                name: did
                port:
                  number: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ssi-ingress
  namespace: integration
spec:
  rules:
    - host: ssi.teda.th
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /schemas
            backend:
              service:
                name: vc-schema-api
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /schema
            backend:
              service:
                name: schema-validator-api
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /web
            backend:
              service:
                name: web-portal-api
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /mobile
            backend:
              service:
                name: mobile-api
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: web-portal
                port:
                  number: 80
